src/app/components/niemSearch/niemSearch.directive.scss
.niem-search {
  display: inline-block;
  margin: 0;
  label {
    color: $white;
    font-size: 18px;
    font-weight: $mont-regular;
    padding-right: 10px;
    letter-spacing: 2.6px;
  }
  .search-group {
    width: 400px;
    #niem-search-input {
      color: $marine-blue;
      height: 39px;
      +.dropdown-menu {
        border-radius: 0;
        width: 330px;
        a {
          color: $marine-blue;
        }
      }
    }
  }



  .search-btn {
    background-color: $darkest-blue;
    color: $white;
    img {
      width: 22.5px;
    }
  }
}

